force-app/main/default/objects/Field_History__c/fields/Field_API__c.field-meta.xml
<CustomField>
    <fullName>Field_API__c</fullName>
    <description>API name of the tracked field</description>
    <label>Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>