force-app/main/default/objects/Field_History__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Label of the tracked field</description>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>