force-app/main/default/objects/Field_History__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Name of the object</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>