force-app/main/default/objects/Field_History__c/fields/Tracked_Object__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Object__c</fullName>
    <description>Name of the object</description>
    <label>Tracked Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>