force-app/main/default/objects/Field_History__c/fields/Tracked_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Record_Id__c</fullName>
    <label>Tracked Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>