force-app/main/default/objects/Field_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tracked_Object__c</columns>
    <columns>Tracked_Field_API__c</columns>
    <columns>Tracked_Field_Label__c</columns>
    <columns>Tracked_Record_Id__c</columns>
    <columns>New_Value__c</columns>
    <columns>Old_Value__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>